trying out some OpenCV od samples

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 ﻿BotenODK/bin/Debug
 BotenODK/BotenODK/bin/Debug
 BotenODK/BotenODK/obj/Debug
+BotenODK-ObjectDetectionKit/venv
+BotenODK-ObjectDetectionKit/yolov3.weights
